Todo sirviendo al 100

--- a/static/equipo/estudiantes.html
+++ b/static/equipo/estudiantes.html
@@ -34,7 +34,7 @@
                 </a> <a class="navbar-item" href="../equipo/index.html">                    Equipo de Investigación
                 </a> <a class="navbar-item" href="../contacto/index.html">                    Contacto
                 </a>
-                <a class="navbar-item" href="/blog/"> Blog    </a>
+                <a class="navbar-item" href="./blog/index.html"> Blog    </a>
                 <a class="navbar-item" href="estudiantes-eng.html">                    Eng/Esp</a>
     </div>
   </div> </nav> <header class="breadcrumbs">
@@ -608,7 +608,7 @@
       <li><a href="../divulgacion/index.html">Divulgación</a></li>
       <li><a href="./index.html">Equipo de Investigación</a></li>
       <li><a href="../contacto/index.html">Contacto</a></li>
-      <li><a href="/blog/">Blog</a></li>
+      <li><a href="./blog/index.html">Blog</a></li>
     </ul>
   </div>
   <div class="footer-right"> <h3>Contacto</h3>
