--- a/static/index.html
+++ b/static/index.html
@@ -57,7 +57,7 @@
                 <a class="navbar-item" href="./contacto/index.html">
                     Contacto
                 </a>
-                <a class="navbar-item" href="/blog/">
+                <a class="navbar-item" href="./blog/index.html">
                     Blog
                 </a>
                 <a class="navbar-item" href="index-eng.html">
