--- a/static/videos/domotica-eng.html
+++ b/static/videos/domotica-eng.html
@@ -57,7 +57,7 @@
                 <a class="navbar-item" href="../contacto/index-eng.html">
                     Contact
                 </a>
-                <a class="navbar-item" href="/blog/">
+                <a class="navbar-item" href="./blog/index.html">
                     Blog
                 </a>
                 <a class="navbar-item" href="domotica.html">
@@ -107,7 +107,7 @@
                 <li><a href="../divulgacion/index-eng.html">Divulgation</a></li>
                 <li><a href="../equipo/index-eng.html">Research Team</a></li>
                 <li><a href="../contacto/index-eng.html">Contact</a></li>
-                <li><a href="/blog/">Blog</a></li>
+                <li><a href="./blog/index.html">Blog</a></li>
             </ul>
         </div>
         <div class="footer-right">
