--- a/static/agradecimientos-eng.html
+++ b/static/agradecimientos-eng.html
@@ -49,7 +49,7 @@
                 <a class="navbar-item" href="./contacto/index-eng.html">
                     Contact
                 </a>
-                <a class="navbar-item" href="/blog/">
+                <a class="navbar-item" href="./blog/index.html">
                     Blog
                 </a>
                 <a class="navbar-item" href="agradecimientos.html">
@@ -127,7 +127,7 @@
                 <li><a href="./videos/index-eng.html">Videos</a></li>
                 <li><a href="./divulgacion/index-eng.html">Divulgation</a></li>
                 <li><a href="./contacto/index-eng.html">Contact</a></li>
-                <li><a href="/blog/">Blog</a></li>
+                <li><a href="./blog/index.html">Blog</a></li>
             </ul>
         </div>
         <div class="footer-right">
