--- a/static/agradecimientos.html
+++ b/static/agradecimientos.html
@@ -49,7 +49,7 @@
                 <a class="navbar-item" href="./contacto/index.html">
                     Contacto
                 </a>
-                <a class="navbar-item" href="/blog/">
+                <a class="navbar-item" href="./blog/index.html">
                     Blog
                 </a>
                 <a class="navbar-item" href="agradecimientos-eng.html">
@@ -139,7 +139,7 @@
                 <li><a href="../videos/index.html">Videos</a></li>
                 <li><a href="../divulgacion/index.html">Divulgación</a></li>
                 <li><a href="../contacto/index.html">Contacto</a></li>
-                <li><a href="/blog/">Blog</a></li>
+                <li><a href="./blog/index.html">Blog</a></li>
             </ul>
         </div>
         <div class="footer-right">
