--- a/static/divulgacion/index.html
+++ b/static/divulgacion/index.html
@@ -57,7 +57,7 @@
                 <a class="navbar-item" href="../contacto/index.html">
                     Contacto
                 </a>
-                <a class="navbar-item" href="/blog/">
+                <a class="navbar-item" href="./blog/index.html">
                     Blog
                 </a>
                 <a class="navbar-item" href="index-eng.html">
@@ -218,7 +218,7 @@
                 <li><a href="../divulgacion/index.html">Divulgación</a></li>
                 <li><a href="../equipo/index.html">Equipo de Investigación</a></li>
                 <li><a href="../contacto/index.html">Contacto</a></li>
-                <li><a href="/blog/">Blog</a></li>
+                <li><a href="./blog/index.html">Blog</a></li>
             </ul>
         </div>
         <div class="footer-right">
