--- a/static/equipo/estudiantes-eng.html
+++ b/static/equipo/estudiantes-eng.html
@@ -32,7 +32,7 @@
                 </a> <a class="navbar-item" href="../equipo/index.html">                   Research Team
                 </a> <a class="navbar-item" href="../contacto/index-eng.html">                    Contact
                 </a>
-                <a class="navbar-item" href="/blog/">Blog</a>
+                <a class="navbar-item" href="./blog/index.html">Blog</a>
                 <a class="navbar-item" href="estudiantes.html">                    Eng/Esp</a>
     </div>
   </div> </nav> <header class="breadcrumbs">
@@ -605,7 +605,7 @@
       <li><a href="../videos/index-eng.html">Videos</a></li>
       <li><a href="../divulgacion/index-eng.html">Divulgation</a></li>
       <li><a href="../contacto/index-eng.html">Contact</a></li>
-      <li><a href="/blog/">Blog</a></li>
+      <li><a href="./blog/index.html">Blog</a></li>
     </ul>
   </div>
   <div class="footer-right"> <h3>Contact</h3>
