--- a/static/videos/videos/index.html
+++ b/static/videos/videos/index.html
@@ -54,7 +54,7 @@
                 <a class="navbar-item" href="../contacto/index.html">
                     Contacto
                 </a>
-                <a class="navbar-item" href="/blog/">
+                <a class="navbar-item" href="./blog/index.html">
                     Blog
                 </a>
                 <a class="navbar-item" href="/">
@@ -123,7 +123,7 @@
                 <li><a href="../videos/index.html">Videos</a></li>
                 <li><a href="../divulgacion/index.html">Divulgación</a></li>
                 <li><a href="../contacto/index.html">Contacto</a></li>
-                <li><a href="/blog/">Blog</a></li>
+                <li><a href="./blog/index.html">Blog</a></li>
             </ul>
         </div>
         <div class="footer-right">
