--- a/static/divulgacion/index-eng.html
+++ b/static/divulgacion/index-eng.html
@@ -57,7 +57,7 @@
                 <a class="navbar-item" href="../contacto/index-eng.html">
                     Contact
                 </a>
-                <a class="navbar-item" href="./blog/index.html">
+                <a class="navbar-item" href="../blog/index.html">
                     Blog
                 </a>
                 <a class="navbar-item" href="./index.html">
@@ -68,7 +68,7 @@
 
     <div class="content">
         <div class="content-bar-left">
-            <h4>Divulgations and Interviews</h4>
+            <h4>Articles and Disclosures</h4>
             <h5>ADMAS</h5>
             <h6>Dr. Javier Izquierdo Reyes</h6>
             <ul>
@@ -91,6 +91,15 @@
                         target="_blank">2016 | Review of Passive BCI framework for Advanced Driver Assistance Systems
                         in Intelligent
                         Transportation </a></li>
+
+				<!--Plantilla Art -->
+				 <br />
+				<li><a href="https://ieeexplore.ieee.org/document/8743135" target="_blank">
+					2019 | Perspective of Autonomous Driving in Mexico </a></li>
+                <br />
+
+				<!--Plantilla Art -->
+
             </ul>
         </div>
         <div class="content-bar">
@@ -111,12 +120,21 @@
                         target="_blank">2016 | ADMAS Project: Driver Learning Algorithm and Driving Simulator ITSE Luis
                         Alberto
                         Curiel Ramirez Advisors: Dr. Javier Izquierdo Reyes. Dr. Martín Rogelio Bustamante Bello.</a></li>
+
+					 <br />
+				<li><a href="https://ieeexplore.ieee.org/document/8743141/" target="_blank">
+					2019 | Analysis and Approach of Semi-Autonomous Driving Architectures</a></li>
+                <br />
             </ul>
+
+
         </div>
+		<!-- EQUIPO-->
         <br>
         <div class="content-bar">
-            <h5>Emotional Domotics:</h5>
-            <h6>Msc. Sergio Alberto Navarro Tuch</h6>
+            <h5>Emotional domotics</h5>
+            <!-- autor-->
+			<h6>Dr. Sergio Alberto Navarro Tuch</h6>
             <ul>
 				<li><a href = "https://link.springer.com/article/10.1007/s12008-019-00598-z?wt_mc=Internal.Event.1.SEM.ArticleAuthorOnlineFirst&utm_source=ArticleAuthorOnlineFirst&utm_medium=email&utm_content=AA_en_06082018&ArticleAuthorOnlineFirst_20190606" target="_blank">2019 | Emotional Domotics: a system and experimental model development for UX implementations</a></li>
 				<br>
@@ -128,12 +146,65 @@
                         Emotional
                         Domotics: Inhabitable Home Automation System for Emotion Modulation Through Facial Analysis</a></li>
                 <br>
-                <li><a href="http://rdcu.be/tJ2X" target="_blank">2017 | Inhabitable space control for the creation of
+                <li><a href="http://rdcu.be/tJ2X" target="_blank">2018 | Inhabitable space control for the creation of
                         healthy
                         interactive spaces through emotional domotics</a></li>
+
+				<!--Plantilla Art -->
+				 <br />
+				<li><a href="https://ieeexplore.ieee.org/document/8743129/" target="_blank">
+					2019 | Variation of Facial Expression Produced by Acoustic Stimulization</a></li>
+                <br />
+
+				<!--Plantilla Art -->
+
+            </ul>
+			<!-- autor-->
+
+			<h6>Ing. Ariel Alejandro Lopez Aguilar</h6>
+            <ul>
+               <!--Plantilla Art -->
+				 <br />
+				<li><a href="https://ieeexplore.ieee.org/document/8743117/" target="_blank">
+					2019 | Interpretation and Emulation for Telegrams of the KNX Standard on MATLAB Simulink</a></li>
+                <br />
+
+				<!--Plantilla Art -->
+
             </ul>
         </div>
+		<!-- EQUIPO-->
+
+		<!-- EQUIPO-->
+        <br>
+        <div class="content-bar">
+            <h5>Others </h5>
+            <!-- autor-->
+			<h6>Others Articles</h6>
+            <ul>
+				 <br />
+				<li><a href="https://ieeexplore.ieee.org/document/8743133/" target="_blank">
+					2019 | Reduction of Stress Levels and Increased Productivity Inside Offices Using Emotional Domotics</a></li>
+                <br />
+
+				<li><a href="https://ieeexplore.ieee.org/document/8743136/" target="_blank">
+					2019 | Environmental Impact for Labor Stations Learning through Emotional Domotics Analysis and Workstation Simulation</a></li>
+
+
+				<!--Plantilla Art -->
+				 <br />
+				<li><a href="https://ieeexplore.ieee.org/document/8743138/" target="_blank">
+					2019 | Smart Backpack ABE</a></li>
+                <br />
+
+				<!--Plantilla Art -->
+
+            </ul>
+			<!-- autor-->
+        </div>
+		<!-- EQUIPO-->
     </div>
+
     <footer>
         <div class="footer-left">
             <a href="https://tec.mx/es" target="_blank"><img src="../img/logos/logo-tec-largo.png"></a>
@@ -148,7 +219,7 @@
                 <li><a href="../divulgacion/index-eng.html">Divulgation</a></li>
                 <li><a href="../equipo/index.html">Research Team</a></li>
                 <li><a href="../contacto/index-eng.html">Contact</a></li>
-                <li><a href="./blog/index.html">Blog</a></li>
+                <li><a href="../blog/index.html">Blog</a></li>
             </ul>
         </div>
         <div class="footer-right">
