--- a/static/divulgacion/index.html
+++ b/static/divulgacion/index.html
@@ -57,7 +57,7 @@
                 <a class="navbar-item" href="../contacto/index.html">
                     Contacto
                 </a>
-                <a class="navbar-item" href="./blog/index.html">
+                <a class="navbar-item" href="../blog/index.html">
                     Blog
                 </a>
                 <a class="navbar-item" href="index-eng.html">
@@ -128,17 +128,7 @@
                 <br />
             </ul>
 
-			<h6>Ing. Ariel Alejandro Lopez Aguilar</h6>
-            <ul>
-               <!--Plantilla Art -->
-				 <br />
-				<li><a href="https://ieeexplore.ieee.org/document/8743117/" target="_blank">
-					2019 | Interpretation and Emulation for Telegrams of the KNX Standard on MATLAB Simulink</a></li>
-                <br />
 
-				<!--Plantilla Art -->
-
-            </ul>
         </div>
 		<!-- EQUIPO-->
         <br>
@@ -171,6 +161,18 @@
 
             </ul>
 			<!-- autor-->
+
+			<h6>Ing. Ariel Alejandro Lopez Aguilar</h6>
+            <ul>
+               <!--Plantilla Art -->
+				 <br />
+				<li><a href="https://ieeexplore.ieee.org/document/8743117/" target="_blank">
+					2019 | Interpretation and Emulation for Telegrams of the KNX Standard on MATLAB Simulink</a></li>
+                <br />
+
+				<!--Plantilla Art -->
+
+            </ul>
         </div>
 		<!-- EQUIPO-->
 
@@ -202,8 +204,8 @@
 			<!-- autor-->
         </div>
 		<!-- EQUIPO-->
-
     </div>
+    
     <footer>
         <div class="footer-left">
             <a href="https://tec.mx/es" target="_blank"><img src="../img/logos/logo-tec-largo.png"></a>
@@ -218,7 +220,7 @@
                 <li><a href="../divulgacion/index.html">Divulgación</a></li>
                 <li><a href="../equipo/index.html">Equipo de Investigación</a></li>
                 <li><a href="../contacto/index.html">Contacto</a></li>
-                <li><a href="./blog/index.html">Blog</a></li>
+                <li><a href="../blog/index.html">Blog</a></li>
             </ul>
         </div>
         <div class="footer-right">
