--- a/static/equipo/index-eng.html
+++ b/static/equipo/index-eng.html
@@ -56,7 +56,7 @@
                 <a class="navbar-item" href="../contacto/index-eng.html">
                     Contact
                 </a>
-                <a class="navbar-item" href="./blog/index.html">
+                <a class="navbar-item" href="../blog/index.html">
                     Blog
                 </a>
                 <a class="navbar-item" href="index.html">
@@ -411,6 +411,7 @@
             </div>
         </div>
     </div>
+
     <footer>
         <div class="footer-left">
             <a href="https://tec.mx/es" target="_blank"><img src="../img/logos/logo-tec-largo.png"></a>
@@ -424,7 +425,7 @@
                 <li><a href="../videos/index-eng.html">Videos</a></li>
                 <li><a href="../divulgacion/index-eng.html">Divulgation</a></li>
                 <li><a href="../contacto/index-eng.html">Contact</a></li>
-                <li><a href="./blog/index.html">Blog</a></li>
+                <li><a href="../blog/index.html">Blog</a></li>
             </ul>
         </div>
         <div class="footer-right">
