--- a/static/contacto/index-eng.html
+++ b/static/contacto/index-eng.html
@@ -54,7 +54,7 @@
                 <a class="navbar-item" href="../contacto/index-eng.html">
                     Contact
                 </a>
-                <a class="navbar-item" href="./blog/index.html">
+                <a class="navbar-item" href="../blog/index.html">
                     Blog
                 </a>
                 <a class="navbar-item" href="./index.html">
@@ -116,7 +116,7 @@
                 <li><a href="../divulgacion/index-eng.html">Divulgation</a></li>
                 <li><a href="../equipo/index.html">Equipo de Investigación</a></li>
                 <li><a href="../contacto/index-eng.html">Contact</a></li>
-                <li><a href="./blog/index.html">Blog</a></li>
+                <li><a href="../blog/index.html">Blog</a></li>
             </ul>
         </div>
         <div class="footer-right">
