--- a/static/equipo/agradecimientos.html
+++ b/static/equipo/agradecimientos.html
@@ -52,7 +52,7 @@
                 <a class="navbar-item" href="../contacto/index.html">
                     Contacto
                 </a>
-                <a class="navbar-item" href="./blog/index.html">
+                <a class="navbar-item" href="../blog/index.html">
                     Blog
                 </a>
                 <a class="navbar-item" href="agradecimientos-eng.html">
@@ -117,6 +117,7 @@
                 </ul>
         </div>
     </div>
+
     <footer>
         <div class="footer-left">
             <a href="https://tec.mx/es" target="_blank"><img src="../img/logos/logo-tec-largo.png"></a>
@@ -131,7 +132,7 @@
                 <li><a href="../divulgacion/index.html">Divulgación</a></li>
                 <li><a href="../equipo/index.html">Equipo de Investigación</a></li>
                 <li><a href="../contacto/index.html">Contacto</a></li>
-                <li><a href="./blog/index.html">Blog</a></li>
+                <li><a href="../blog/index.html">Blog</a></li>
             </ul>
         </div>
         <div class="footer-right">
