--- a/static/proyectos/admas.html
+++ b/static/proyectos/admas.html
@@ -62,7 +62,7 @@
                 <a class="navbar-item" href="../contacto/index.html">
                     Contacto
                 </a>
-                <a class="navbar-item" href="./blog/index.html">
+                <a class="navbar-item" href="../blog/index.html">
                     Blog
                 </a>
                 <a class="navbar-item" href="admas-eng.html">
@@ -1101,7 +1101,7 @@
                 <li><a href="../divulgacion/index.html">Divulgación</a></li>
                 <li><a href="../equipo/index.html">Equipo de Investigación</a></li>
                 <li><a href="../contacto/index.html">Contacto</a></li>
-                <li><a href="./blog/index.html">Blog</a></li>
+                <li><a href="../blog/index.html">Blog</a></li>
             </ul>
         </div>
         <div class="footer-right">
