--- a/static/proyectos/index-eng.html
+++ b/static/proyectos/index-eng.html
@@ -38,7 +38,7 @@
                 </a> <a class="navbar-item" href="../equipo/index.html">                    Research Team
                 </a> <a class="navbar-item" href="../contacto/index-eng.html">                    Contact
                 </a>
-                <a class="navbar-item" href="./blog/index.html"> Blog </a>
+                <a class="navbar-item" href="../blog/index.html"> Blog </a>
                 <a class="navbar-item" href="index.html">                    Eng/Esp</a>
     </div>
   </div> </nav>
@@ -267,7 +267,7 @@
       <li><a href="../videos/index-eng.html">Videos</a></li>
       <li><a href="../divulgacion/index-eng.html">Divulgation</a></li>
       <li><a href="../contacto/index-eng.html">Contact</a></li>
-      <li><a href="./blog/index.html">Blog</a></li>
+      <li><a href="../blog/index.html">Blog</a></li>
     </ul>
   </div>
   <div class="footer-right"> <h3>Contact</h3>
