--- a/static/proyectos/index.html
+++ b/static/proyectos/index.html
@@ -37,7 +37,7 @@
                 </a> <a class="navbar-item" href="../equipo/index.html">                    Equipo de Investigación
                 </a> <a class="navbar-item" href="../contacto/index.html">                    Contacto
                 </a>
-                <a class="navbar-item" href="./blog/index.html">
+                <a class="navbar-item" href="../blog/index.html">
                     Blog
                 </a>
                 <a class="navbar-item" href="index-eng.html">                    Eng/Esp</a>
@@ -481,7 +481,7 @@
       <li><a href="../divulgacion/index.html">Divulgación</a></li>
       <li><a href="../equipo/index.html">Equipo de Investigación</a></li>
       <li><a href="../contacto/index.html">Contacto</a></li>
-      <li><a href="./blog/index.html">Blog</a></li>
+      <li><a href="../blog/index.html">Blog</a></li>
     </ul>
   </div>
   <div class="footer-right"> <h3>Contacto</h3>
